# jfGLinux

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
examples/: bufferToScreen.cpp  simpleWindow.cpp
src/: CMakeLists.txt  Render.cpp  Render.h  Timing.cpp  Timing.h  WindowL.cpp  WindowL.h  jfGL.cpp  jfGL.h  windef.h
